precisa da implementação de arquivo, uma controller q aceite a criacao de uma dto do usuario com/sem arquivo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port = 8998
+spring.datasource.url = jdbc:mysql://localhost:3306/db_videos?createDatabaseIfNotExist=true
+spring.datasource.username = root
+spring.datasource.password = root
+spring.jpa.hibernate.ddl-auto = update
+spring.servlet.multipart.max-file-size=100MB
