--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port = 8998
 spring.datasource.url = jdbc:mysql://localhost:3306/db_videos?createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = root
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.servlet.multipart.max-file-size=100MB
